2022-10-08 Fred Gleason <fredg@paravelsystems.com>
	* Initial package generation from old site.
2022-10-08 Fred Gleason <fredg@paravelsystems.com>
	* Added sample Apache configs in 'conf/'.
2022-10-09 Fred Gleason <fredg@paravelsystems.com>
	* Refactored 'htdocs/index.shtml' to use CSS.
2022-10-09 Fred Gleason <fredg@paravelsystems.com>
	* Added section comments to 'htdocs/index.shtml'.
2022-10-09 Fred Gleason <fredg@paravelsystems.com>
	* Update <meta> tags.
	* Lower-cased all HTML tags.
2022-10-10 Fred Gleason <fredg@paravelsystems.com>
	* Removed 'conf/wwwtest.rivendellaudio.org.conf'.
	* Added 'conf/test.rivendellaudio.org.conf'.
2022-10-10 Fred Gleason <fredg@paravelsystems.com>
	* Changed the site doctype to HTML5.
2022-10-10 Fred Gleason <fredg@paravelsystems.com>
	* Removed DOS-style line endings from 'htdocs/index.shtml'.
2022-10-10 Fred Gleason <fredg@paravelsystems.com>
	* Split out styling data into 'htdocs/rivendellaudio.css'.