@@ -18,3 +18,5 @@
 	* Removed DOS-style line endings from 'htdocs/index.shtml'.
 2022-10-10 Fred Gleason <fredg@paravelsystems.com>
 	* Split out styling data into 'htdocs/rivendellaudio.css'.
+2022-10-10 Fred Gleason <fredg@paravelsystems.com>
+	* Split out the version display into 'htdocs/versions,html'.
